# mcp-memory-server

./: .gitignore  CHANGELOG.md  README.md  flake.nix  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: CI.yaml  release.yml  sync-flake-version.yml
docs/: index.md  installation.md  tools.md
scripts/: sync-flake-version.sh
src/mcp_memory/: __init__.py  __main__.py  models.py  server.py
src/mcp_memory/tools/: __init__.py  kill.py  memory.py  processes.py
tests/: test_tools.py
