[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-memory-server"
version = "0.1.0"
description = "MCP server for memory management with process inspection and cleanup"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Paolo Veronelli" }]
keywords = ["mcp", "memory", "processes", "system"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=0.4.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
mcp-memory = "mcp_memory.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_memory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
